# rhizo

./: .gitignore  BRAND.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KILLER_DEMOS.md  LICENSE  LOTITUDE_MIGRATION.md  ORIGIN_STORY.md  PHASE5_PLAN.md  PHASE6_PLAN.md  PHASE7_PLAN.md  README.md  ROADMAP.md  UDR_ACTION_PLAN.md  VISION.md  math_verification.md  pyproject.toml  pyrightconfig.json  udr_roadmap.md  unified_data_runtime_whitepaper.docx  unified_data_runtime_whitepaper.txt
benchmarks/: 2pc_participant_server.py  CLOUD_BENCHMARK.md  CLOUD_BENCHMARK_RESULTS.json  CLOUD_MULTI_REGION_RESULTS.json  CLOUD_SAME_REGION_RESULTS.json  COMPETITIVE_BENCHMARK_RESULTS.json  COMPREHENSIVE_BENCHMARK_RESULTS.json  COMPREHENSIVE_COMPETITIVE_RESULTS.json  DISTRIBUTED_BENCHMARK_RESULTS.json  ENERGY_BENCHMARK_RESULTS.json  INDUSTRY_BENCHMARK_RESULTS.json  README.md  REAL_CONSENSUS_BENCHMARK_RESULTS.json  SCALE_BENCHMARK_RESULTS.json  agg_gap_profiler.py  baseline_benchmark.py  benchmark_results.json  competitive_benchmark.py  comprehensive_benchmark.py  comprehensive_competitive_benchmark.py  diff_benchmark.py  (+12 more)
python/: README.md  _rhizo.pyi  armillaria.pyi  pyproject.toml  udr.pyi
python/armillaria_query/: __init__.py  engine.py  olap_engine.py  reader.py  subscriber.py  writer.py
python/rhizo/: __init__.py  cache.py  database.py  diff.py  engine.py  exceptions.py  export.py  gc.py  metrics.py  olap_engine.py  reader.py  schema_utils.py  subscriber.py  table_meta.py  transaction.py  writer.py
python/udr_query/: engine.py
udr_python/: Cargo.toml
udr_python/src/: lib.rs
(+350 files in other folders)
