[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "armillaria-query"
version = "0.1.0"
description = "Query layer for Armillaria - The largest organism on Earth, now for your data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "maturin>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["armillaria_query*"]
