[package]
name = "armillaria_python"
version = "0.1.0"
edition = "2021"
description = "The largest organism on Earth, now for your data - content-addressable storage with cross-table ACID transactions"

[lib]
name = "armillaria"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
udr_core = { path = "../udr_core" }
